--- a/views/storefront.hbs
+++ b/views/storefront.hbs
@@ -1,82 +1,8 @@
-
 <hr class="pt-3">
 
-<ul class="nav">
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Welcome to {{title}}</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Photos</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Graphics</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Templates</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Themes</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Fonts</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Add-Ons</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">3D</a>
-  </li>
-</ul>
-
-
-<!--
-
-  MONTHLY
-
--->
-<hr class="pt-3 border-0">
-
-<div class="card text-white bg-secondary py-3 mb-3">
-  <div class="card-header">
-    Ready-to-use design assets from {{vendorCount}} independent creators
-  </div>
-
-  <div class="card-body text-right">
-    <h5 class="card-title">
-      Graphics, fonts, themes, photos and more, starting at $2!
-    </h5>
-
-    <hr class="pt-3">
-    <p class="card-text">Get 6 free products and 10% off!</p>
-    <a href="#" class="btn btn-sm btn-primary">Continue →</a>
-
-  </div>
-
-  <div class="card-body bg-dark">
-
-    <h5 class="card-title">
-      {{monthName}} Big Bundle
-    </h5>
-
-    <hr class="pt-3">
-    <p class="card-text">A massive 68 items for only $39</p>
-    <a href="#" class="btn btn-primary">See Whats Included →</a>
-
-  </div>
-
-</div>
-
-
-<!--
-
-  FREE
-
--->
-<hr class="py-3 border-0">
-
 <h3 class="py-3">
-  These products are free this week only, so get 'em before they're gone!
-  <small class="text-muted">Exclusive Free Goods</small>
+  {{vendorName}}
+  <small class="text-muted">Welcome to {{vendorId}} Storefront</small>
 </h3>
 
 <div class="card-deck py-3">
