--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>{{title}}</title>
+
+    <link rel="icon" href="images/favicon.ico">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+
+    <script src="https://unpkg.com/vue"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    {{{body}}}
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col">
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link small text-muted" href="#">Get Free Goods</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link small text-muted" href="#">Open a Shop</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link small text-muted" href="#">Become a Partner</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link small text-muted" href="#">Discussions</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link small text-muted" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link small text-muted disabled" href="#">Free Bonus Credits</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          {{{body}}}
+        </div>
+      </div>
+
+    </div>
+
   </body>
 </html>
