Initial Navigation Outline

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -76,7 +76,7 @@
 
 <h3 class="py-3">
   These products are free this week only, so get 'em before they're gone!
-  <small class="text-muted">Exclusive Free Goods</small>
+  <small class="text-muted d-block">Exclusive Free Goods</small>
 </h3>
 
 <div class="card-deck py-3">
