--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,32 +1,6 @@
 
-<hr class="pt-3">
 
-<ul class="nav">
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Welcome to {{title}}</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Photos</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Graphics</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Templates</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Themes</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Fonts</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Add-Ons</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">3D</a>
-  </li>
-</ul>
+{{>sub_menu}}
 
 
 <!--
@@ -41,28 +15,8 @@
     Ready-to-use design assets from {{vendorCount}} independent creators
   </div>
 
-  <div class="card-body text-right">
-    <h5 class="card-title">
-      Graphics, fonts, themes, photos and more, starting at $2!
-    </h5>
-
-    <hr class="pt-3">
-    <p class="card-text">Get 6 free products and 10% off!</p>
-    <a href="#" class="btn btn-sm btn-primary">Continue →</a>
-
-  </div>
-
-  <div class="card-body bg-dark">
-
-    <h5 class="card-title">
-      {{monthName}} Big Bundle
-    </h5>
-
-    <hr class="pt-3">
-    <p class="card-text">A massive 68 items for only $39</p>
-    <a href="#" class="btn btn-primary">See Whats Included →</a>
-
-  </div>
+  {{{daily-discount}}}
+  {{{monthly-bundle}}}
 
 </div>
 
