--- a/views/partials/sub-menu.hbs
+++ b/views/partials/sub-menu.hbs
@@ -1,15 +1,10 @@
-
----
 <hr class="pt-3">
 <ul class="nav">
-
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Welcome to {{title}}</a>
-  </li>
-
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="#">Photos</a>
-  </li>
-
-
+  {{#with menu}}
+    {{#each sub}}
+    <li class="nav-item">
+      <a class="nav-link text-muted" href="{{id}}">{{name}}</a>
+    </li>
+    {{/each}}
+  {{/with}}
 </ul>
