--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,69 +1,35 @@
 
 
-{{>sub_menu}}
-
-
-<!--
-
-  MONTHLY
-
--->
-<hr class="pt-3 border-0">
-
-<div class="card text-white bg-secondary py-3 mb-3">
-  <div class="card-header">
-    Ready-to-use design assets from {{vendorCount}} independent creators
-  </div>
-
-  {{{daily-discount}}}
-  {{{monthly-bundle}}}
-
-</div>
-
 
 <!--
 
   FREE
 
 -->
-<hr class="py-3 border-0">
+<hr class="border-0 space">
 
-<h3 class="py-3">
-  These products are free this week only, so get 'em before they're gone!
-  <small class="text-muted d-block">Exclusive Free Goods</small>
-</h3>
-
+{{{section-header "Trending Products" "Get 'em while they're hot!"}}}
 <div class="card-deck py-3">
+  {{{trending-products 3}}}
+</div>
+<div class="card-deck py-3">
+  {{{trending-products 3}}}
+</div>
+<div class="card-deck py-3">
+  {{{trending-products 3}}}
+</div>
 
-  <div class="card">
-    <div class="card-body bg-secondary text-white" style="min-height: 240px;">
-    </div>
-    <div class="card-body">
-      <p class="card-text"><a href="/fantasyui-com/free-dorka" class="h6">DORKA - Powerpoint Template</a></p>
-      <p class="card-text">by <a href="/storefront/fantasyui-com" class="small">FantasyUI</a> in <a href="/templates" class="small">Templates</a></p>
-      <p class="card-text float-right"><small class="text-muted"><a href="/fantasyui-com/free-dorka" class="btn btn-sm btn-primary">Free Download</a></small></p>
-    </div>
-  </div>
+{{{section-header "These products are free this week only." "Exclusive Free Goods"}}}
+<div class="card-deck py-3">
+  {{{free-products 3}}}
+</div>
+<div class="card-deck py-3">
+  {{{free-products 3}}}
+</div>
+<div class="card-deck py-3">
+  {{{free-products 3}}}
+</div>
 
-  <div class="card">
-    <div class="card-body bg-secondary text-white" style="min-height: 240px;">
-    </div>
-    <div class="card-body">
-      <p class="card-text"><a href="/fantasyui-com/free-dorka" class="h6">DORKA - Powerpoint Template</a></p>
-      <p class="card-text">by <a href="/storefront/fantasyui-com" class="small">FantasyUI</a> in <a href="/templates" class="small">Templates</a></p>
-      <p class="card-text float-right"><small class="text-muted"><a href="/fantasyui-com/free-dorka" class="btn btn-sm btn-primary">Free Download</a></small></p>
-    </div>
-  </div>
-
-  <div class="card">
-    <div class="card-body bg-secondary text-white" style="min-height: 240px;">
-    </div>
-    <div class="card-body">
-      <p class="card-text"><a href="/fantasyui-com/free-dorka" class="h6">DORKA - Powerpoint Template</a></p>
-      <p class="card-text">by <a href="/storefront/fantasyui-com" class="small">FantasyUI</a> in <a href="/templates" class="small">Templates</a></p>
-      <p class="card-text float-right"><small class="text-muted"><a href="/fantasyui-com/free-dorka" class="btn btn-sm btn-primary">Free Download</a></small></p>
-    </div>
-  </div>
 
 
 </div>
