--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -33,9 +33,7 @@
     <p><slot name="my-text">My default text</slot></p>
   </template>
 
-
-  <div class="container">
-
+  <div class="container-fluid">
     <div class="row">
       <div class="col">
         <ul class="nav">
@@ -52,27 +50,26 @@
 
     <div class="row">
       <div class="col">
+        {{>sub_menu}}
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col">
         {{{body}}}
       </div>
     </div>
-
   </div>
 
-  <div class="container-fluid">
-
-    <div class="row bg-dark text-white space">
+  <div class="container-fluid pt-3 mt-3">
+    <div class="row py-5 bg-dark text-white lato-100">
       <div class="col text-center p-3">
-
         <h1>{{title}}</h1> {{title}} &mdash; world’s marketplace for design.<br> {{note}}
-
       </div>
     </div>
-
-
-    <div class="row bg-secondary text-white space">
-
-
-
+    <div class="row py-5 bg-secondary text-white">
       {{#with menu}}
         {{#each footer}}
         <div class="col">
@@ -86,12 +83,8 @@
         </div>
         {{/each}}
       {{/with}}
-
-
     </div>
-
   </div>
 
 </body>
-
 </html>
